# cliparse

./: CMakeLists.txt  compile_flags.txt
src/: main.c
